2025-09-29_argocd/training/examples/app_of_apps/apps/bar/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 50Mi
