2025-09-29_argocd/training/examples/app_of_apps/apps/bar/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bar
  labels:
    release: bar
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: bar
