2025-09-29_argocd/training/examples/app_of_apps/apps/bar/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bar.lab0.sikademo.com
      secretName: bar.lab0.sikademo.com-tls
  rules:
    - host: bar.lab0.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bar
                port:
                  number: 80
